Languages, minor fixes

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -22,6 +22,13 @@
                 <a href="{{ .Site.Params.facebook }}" target="_blank" class="hover:text-gray-400 transition-colors duration-300">
                     <i class="fab fa-facebook text-xl"></i>
                 </a>
+                <div class="w-0.5 h-6 bg-current self-center rounded-full"></div>
+                <a href="" target="_blank">
+                    <span class="text-xl inline-block align-middle">IT</span>
+                </a>
+                <a href="" target="_blank">
+                    <span class="text-xl inline-block align-middle">EN</span>
+                </a>
             </div>
         </div>
     </div>
