hotfix: X chiusura menu ora visibile

--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,4 +1,4 @@
-<nav id="mobileMenu" class="fixed top-0 left-0 bottom-0 w-full hidden bg-primary-dark z-40" aria-label="Mobile navigation" role="navigation">
+<nav id="menu" class="fixed top-0 left-0 bottom-0 w-full hidden bg-primary-dark z-40" aria-label="Mobile navigation" role="navigation">
   <div class="w-full mx-auto px-4 sm:px-0 max-w-3xl bg-primary-dark text-primary-light z-40">
     <div class="container mx-auto py-5 md:py-7">
       <div class="flex items-center justify-between relative h-7 md:h-10">
@@ -6,8 +6,8 @@
         <div class="flex items-center">
           <!-- Close button positioned in the same spot -->
           <button 
-            id="closeMenu" 
-            class="absolute inset-0  justify-center" 
+            id="closeMenuButton" 
+            class="absolute inset-0 justify-center" 
             aria-label="Close menu" 
             type="button"
           >
