--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,31 +6,32 @@
         <!-- Menu button container -->
         <div class="relative h-7 md:h-10 w-8 md:w-10">
           <!-- Regular menu button -->
-          <button 
-          class="absolute inset-0 flex items-center justify-center" 
-          aria-label="Menu" 
-          id="mainMenuButton"
+          <button
+            class="absolute inset-0 flex items-center justify-center"
+            aria-label="Menu"
+            id="openMenuButton"
           >
-          <img 
-            src="/images/menu.png" 
-            alt="Menu" 
-            class="h-full w-auto object-contain aspect-square"
-          >
+            <img
+              src="/images/menu.png"
+              alt="Menu"
+              class="h-full w-auto object-contain aspect-square"
+            />
           </button>
         </div>
 
-          <!-- Metro Olografix Logo -->
-          <div class="h-7 md:h-10 items-center flex px-4 flex-shrink-0">
-
-          <img 
-            src="/images/metro-dark.png" 
-            alt="Metro Olografix Logo" 
+        <!-- Metro Olografix Logo -->
+        <div class="h-7 md:h-10 items-center flex px-4 flex-shrink-0">
+          <img
+            src="/images/metro-dark.png"
+            alt="Metro Olografix Logo"
             class="h-full w-auto object-contain max-w-none"
-          >
-          </div>
+          />
+        </div>
       </div>
       <a href="{{ .Site.BaseURL | relLangURL }}">
-        <h1 class="text-2xl md:text-5xl font-bold m-0 transition-all duration-300">
+        <h1
+          class="text-2xl md:text-5xl font-bold m-0 transition-all duration-300"
+        >
           Metro Olografix<span class="inline-block blink">_</span>
         </h1>
       </a>
