--- a/layouts/_default/associazione.html
+++ b/layouts/_default/associazione.html
@@ -27,7 +27,7 @@
 </div>
 
 <article>
-    <h1 class="text-4xl font-bold mb-8 text-primary-dark">Il direttivo</h1>
+    <h1 class="text-4xl font-bold mb-8 text-primary-dark">{{ T "boardText" }}</h1>
 
     <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 justify-items-center lg:justify-center">
         {{ range .Site.Params.direttivo }}
