--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -56,6 +56,14 @@
             {{ partial "breadcrumbs.html" . }}
             {{ end }}
 
+            <ul>
+                {{ range $.Site.Home.AllTranslations }}
+                <li><a href="{{ .RelPermalink }}">{{ .Language.LanguageName }}</a></li>
+                {{ end }}
+                </ul>
+                
+                
+
             {{ block "main" . }}{{ end }}
         </main>
     </div>
