--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,13 +2,13 @@
 
 <div class="bg-white p-6 border-4 border-primary-dark shadow-[8px_8px_0px_0px_rgba(22,33,62,1)] mb-8 relative">
     <p class="text-accent mb-4 text-justify">{{ .Site.Params.description }}</p>
-    <a href="{{ "associazione" | relURL }}" class="font-bold absolute bottom-2 right-2 text-accent hover:underline">Scopri di più >></a>
+    <a href="{{ "associazione" | relURL }}" class="font-bold absolute bottom-2 right-2 text-accent hover:underline">{{ T "learnMoreText" }} >></a>
 </div>
 
 <!-- Membership Banner -->
 <div class="bg-accent text-primary-light p-4 rounded-lg mb-8">
     <a href="https://associati.olografix.org" class="block text-center text-xl font-bold rainbow-text">
-        30 anni di Metro Olografix! | Tesseramento 2025
+        {{ T "membershipBanner" }}
     </a>
 </div>
 
@@ -24,9 +24,9 @@
             <h3 class="text-xl font-bold mb-2 text-accent">{{ .Title }}</h3>
             <p class="text-accent mb-4 text-justify">{{ .Params.subtitle | default .Summary }}</p>
             {{ if .Params.externalUrl }}
-                <a href="{{ .Params.externalUrl}}" class="text-sm font-bold absolute bottom-2 right-2 text-accent hover:underline">Vai al sito >></a>
+                <a href="{{ .Params.externalUrl}}" class="text-sm font-bold absolute bottom-2 right-2 text-accent hover:underline">{{ T "goExternalText" }} >></a>
             {{ else }}
-                <a href="{{ .RelPermalink }}" class="text-sm font-bold absolute bottom-2 right-2 text-accent hover:underline">Vai >></a>
+                <a href="{{ .RelPermalink }}" class="text-sm font-bold absolute bottom-2 right-2 text-accent hover:underline">{{ T "goText" }} >></a>
             {{ end }}
         </div>
         {{ end }}
