--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 
 <div class="bg-white p-6 border-4 border-primary-dark shadow-[8px_8px_0px_0px_rgba(22,33,62,1)] mb-8 relative">
     <p class="text-accent mb-4 text-justify">{{ .Site.Params.description }}</p>
-    <a href="{{ "associazione" | relURL }}" class="font-bold absolute bottom-2 right-2 text-accent hover:underline">{{ T "learnMoreText" }} >></a>
+    <a href="{{ "associazione" | relLangURL }}" class="font-bold absolute bottom-2 right-2 text-accent hover:underline">{{ T "learnMoreText" }} >></a>
 </div>
 
 <!-- Membership Banner -->
