--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -45,11 +45,11 @@
         </a>
 
         <div class="w-0.5 h-6 bg-current self-center rounded-full"></div>
-        {{ range $.Site.Home.AllTranslations }}
+        {{ range .Translations }}
         <a href="{{ .RelPermalink }}">
-          <span class="text-xl inline-block align-middle"
-            >{{ .Language.LanguageName }}</span
-          >
+          <span class="text-xl inline-block align-middle">
+            {{ .Language.LanguageName }}
+          </span>
         </a>
         {{ end }}
       </div>
