--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,10 +6,10 @@
     >
       <!-- Left side with existing content -->
       <p class="text-center w-full md:w-auto">
-        fatto con
+        {{ T "poweredByHugo" }}
         <span class="hugo-text"><span class="letter">H</span>ugo</span> |
         <a href="{{ .Site.Params.archiveOldSite }}" target="_blank"
-          >vecchio sito</a
+          >{{ T "oldWebsite" }}</a
         >
       </p>
 
