aggiunto margine nella visualizzazione galleria

--- a/layouts/photogallery/single.html
+++ b/layouts/photogallery/single.html
@@ -14,7 +14,7 @@
     </header>
 
     <section class="gallery-container">
-        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4">
+        <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4 mb-4">
             {{ range $albumData.images }}
                 {{ $imageUrl := printf "%s/%s/%s" $serverBase $albumName .name }}
                 {{ $thumbnailUrl := printf "%s/%s/%s" $serverBase $albumName .thumbnail }}
