--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-{{ if .Params.externalUrl }}
+{{ if and (.Params.externalUrl) (.Params.forceRedirect | default true) }}
 <meta http-equiv="refresh" content="0; url={{ .Params.externalUrl }}" />
 {{ end }}
 
@@ -14,8 +14,10 @@
     </div>
     {{ end }}
 
-    <div class="bg-white p-6 border-4 border-primary-dark shadow-[8px_8px_0px_0px_rgba(22,33,62,1)]">
-        {{ .Content }}
-    </div>
+    {{ partial "card.html" (dict
+        "content" .Content
+        "goToLink" .Params.footerUrl
+        "goToText" (T "goExternalText")
+        "withShadow" true ) }}
 </article>
 {{ end }}
