--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,14 @@
 {{ define "main" }}
 
-<div class="bg-white p-6 border-4 border-primary-dark shadow-[8px_8px_0px_0px_rgba(22,33,62,1)] mb-8 relative">
-    <p class="text-accent mb-4 text-justify">{{ .Site.Params.description }}</p>
-    {{ $association := site.GetPage "section" "associazione" }}
-    <a href="{{ $association.RelPermalink | relLangURL }}" class="font-bold absolute bottom-2 right-2 text-accent hover:underline">{{ T "learnMoreText" }} >></a>
-</div>
+<!-- use custom components "card" -->
+{{ partial "card.html" (dict 
+    "content" (.Site.Params.description)
+    "goToSection" "associazione"
+    "goToText" (T "learnMoreText")
+    "withShadow" true) }}
 
 <!-- Membership Banner -->
-<div class="bg-accent text-primary-light p-4 rounded-lg mb-8">
+<div class="bg-accent text-primary-light p-4 rounded-lg mb-4 mt-4">
     <a href="https://associati.olografix.org" class="block text-center text-xl font-bold rainbow-text">
         {{ T "membershipBanner" }}
     </a>
@@ -21,20 +22,29 @@
         {{ $activitiesAndProjects := union (where .Site.RegularPages "Type" "attivita") (where .Site.RegularPages "Type" "progetti") }}
         {{ $sortedActivitiesAndProjects := sort $activitiesAndProjects ".Date" "desc" }}
         {{ range first $maxItems $sortedActivitiesAndProjects }}
-        <div class="bg-white p-4 border-2 border-primary-dark relative">
-            <h3 class="text-xl font-bold mb-2 text-accent">{{ .Title }}</h3>
-            <p class="text-accent mb-4 text-justify">{{ .Params.subtitle | default .Summary }}</p>
-            {{ if .Params.externalUrl }}
-                <a href="{{ .Params.externalUrl}}" class="text-sm font-bold absolute bottom-2 right-2 text-accent hover:underline">{{ T "goExternalText" }} >></a>
-            {{ else }}
-                <a href="{{ .RelPermalink | relLangURL }}" class="text-sm font-bold absolute bottom-2 right-2 text-accent hover:underline">{{ T "goText" }} >></a>
-            {{ end }}
-        </div>
+
+        <!-- create link and text -->
+        {{ $link := "" }}
+        {{ $text := "" }}
+        {{ if .Params.externalUrl }}
+            {{ $link = .Params.externalUrl }}
+            {{ $text = T "goExternalText" }}
+        {{ else }}
+            {{ $link = .RelPermalink | relLangURL }}
+            {{ $text = T "goText" }}
+        {{ end }}
+        <!-- use custom components "card" -->
+        {{ partial "card.html" (dict
+            "title" .Title
+            "content" (.Params.subtitle | default .Summary )
+            "goToLink" $link
+            "goToText" $text
+            "badge" (cond (eq .Type "attivita") "Attività" "Progetto" )) }}
         {{ end }}
     </div>
 
     {{ if gt (len $sortedActivitiesAndProjects) $maxItems }}
-    <div class="text-center mt-4">
+    <div class="text-center">
         <div class="grid grid-cols-2 md:grid-cols-2 gap-4">
             {{ $activities := site.GetPage "section" "attivita" }}
             <a href="{{ $activities.RelPermalink | relLangURL }}" class="inline-block bg-accent text-primary-light px-4 py-2 rounded-lg">{{ T "allActivities" }}</a>
