--- a/static/css/main.css
+++ b/static/css/main.css
@@ -85,3 +85,7 @@ body {
 .rainbow-text:hover {
   animation-play-state: running;
 }
+
+.badge {
+  font-size: 12px; background-color: white; border: 1px solid #666666; border-radius: 4px; padding: 2px 8px; box-shadow: 1px 1px 0px rgba(0,0,0,0.2);
+}
