--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -69,6 +69,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
+
+    <!-- Analytics (Umami) -->
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="8a990d14-c129-4220-9c0d-be2e2c59ee34"></script>
   </head>
   <body class="min-h-screen flex flex-col">
     <div class="container mx-auto px-4 sm:px-0 max-w-3xl flex-grow relative">
