link to home on MX Logo, MX logo on menu, minor fixes

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
       <!-- Left section with menu and logo -->
       <div class="flex items-center">
         <!-- Menu button container -->
-        <div class="relative h-7 md:h-10 w-8 md:w-10">
+        <div class="relative h-8 md:h-10 w-8 md:w-10">
           <!-- Regular menu button -->
           <button
             class="absolute inset-0 flex items-center justify-center"
@@ -20,13 +20,13 @@
         </div>
 
         <!-- Metro Olografix Logo -->
-        <div class="h-7 md:h-10 items-center flex px-4 flex-shrink-0">
+        <a href="/" class="h-8 md:h-10 items-center flex px-4 flex-shrink-0">
           <img
             src="/images/metro-dark.png"
             alt="Metro Olografix Logo"
             class="h-full w-auto object-contain max-w-none"
           />
-        </div>
+        </a>
       </div>
       <a href="{{ .Site.BaseURL | relLangURL }}">
         <h1
