--- a/static/css/main.css
+++ b/static/css/main.css
@@ -89,3 +89,12 @@ body {
 .badge {
   font-size: 12px; background-color: white; border: 1px solid #666666; border-radius: 4px; padding: 2px 8px; box-shadow: 1px 1px 0px rgba(0,0,0,0.2);
 }
+
+#headquarterStatusBadge {
+  font-size: 14px;
+  padding: 4px 8px;
+  border-radius: 4px;
+  color: white;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+}
