--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,17 +1,25 @@
 {{ define "main" }}
 
-<!-- headquarter status -->
-<div class="mb-4 flex justify-end items-center space-x-2">
-  <span class="font-bold text-primary-dark">Headquarter Status:</span>
-  <span id="headquarterStatusBadge" class="bg-gray-500">Loading...</span>
-</div>
-
 <!-- use custom components "card" -->
-{{ partial "card.html" (dict 
-    "content" (.Site.Params.description)
-    "goToSection" "associazione"
-    "goToText" (T "learnMoreText")
-    "withShadow" true) }}
+<div class="grid grid-cols-5 gap-4 h-full">
+  <div class="col-span-3 h-full">
+    {{ partial "card.html" (dict 
+      "content" (.Site.Params.description)
+      "goToSection" "associazione"
+      "goToText" (T "learnMoreText")
+      "withShadow" true
+      "fullHeight" true) }}
+  </div>
+  <div class="col-span-2 h-full">
+    {{ partial "card.html" (dict
+      "title" "<div id=\"headquarterTitle\">/home/olografix</div>"
+      "content" "<p>Vieni a trovarci in <strong>Viale Marconi 278/1</strong>, Pescara. Ci riuniamo ogni XXXX sera dalle <em>21:00</em> alle <em>23:00</em>.</p>"
+      "goToLink" "other-section"
+      "goToText" "Mappa"
+      "withShadow" false
+      "fullHeight" true) }}
+  </div>
+</div>
 
 <!-- Membership Banner -->
 <div class="bg-accent text-primary-light p-4 rounded-lg mb-4 mt-4">
