--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,25 +1,28 @@
 {{ define "main" }}
 
 <!-- use custom components "card" -->
-<div class="grid grid-cols-5 gap-4 h-full">
-  <div class="col-span-3 h-full">
-    {{ partial "card.html" (dict 
-      "content" (.Site.Params.description)
-      "goToSection" "associazione"
-      "goToText" (T "learnMoreText")
-      "withShadow" true
-      "fullHeight" true) }}
+<!-- use custom components "card" -->
+<div class="grid grid-cols-1 md:grid-cols-5 gap-4 h-full">
+    <div class="md:col-span-3 h-full">
+      {{ partial "card.html" (dict 
+        "content" (.Site.Params.description)
+        "goToSection" "associazione"
+        "goToText" (T "learnMoreText")
+        "withShadow" true
+        "fullHeight" true) }}
+    </div>
+    <div class="md:col-span-2 h-full">
+      {{ partial "card.html" (dict
+        "title" (partial "headquarters-header.html" .)
+        "content" "<p>Vieni a trovarci in <strong>Viale Marconi 278/1</strong>, Pescara. Ci riuniamo ogni XXXX sera dalle <em>21:00</em> alle <em>23:00</em>.</p>"
+        "goToLink" "https://www.openstreetmap.org/node/12539021893"
+        "goToText" "Mappa"
+        "isExternal" true
+        "targetBlank" true
+        "withShadow" false
+        "fullHeight" true) }}
+    </div>
   </div>
-  <div class="col-span-2 h-full">
-    {{ partial "card.html" (dict
-      "title" "<div id=\"headquarterTitle\">/home/olografix</div>"
-      "content" "<p>Vieni a trovarci in <strong>Viale Marconi 278/1</strong>, Pescara. Ci riuniamo ogni XXXX sera dalle <em>21:00</em> alle <em>23:00</em>.</p>"
-      "goToLink" "other-section"
-      "goToText" "Mappa"
-      "withShadow" false
-      "fullHeight" true) }}
-  </div>
-</div>
 
 <!-- Membership Banner -->
 <div class="bg-accent text-primary-light p-4 rounded-lg mb-4 mt-4">
