--- a/static/css/main.css
+++ b/static/css/main.css
@@ -78,12 +78,11 @@ body {
 }
 
 .rainbow-text {
-  animation: rainbow-text 3s infinite;
-  animation-play-state: paused;
+  animation: none;
 }
 
 .rainbow-text:hover {
-  animation-play-state: running;
+  animation: rainbow-text 3s infinite;
 }
 
 .badge {
